# VulnCheck-Pro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  FAQ.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  app.py  cli.py  pyproject.toml  requirements.txt  secureaudit.spec  test_engine.py
.github/workflows/: build.yml
assets/: icon.icns
docs/: ARCHITECTURE.md
src/audit/system/: base.py  system_information.py
src/audits/: base.py  disk_encryption_audit.py  firewall_audit.py  open_ports_audit.py  registry.py  running_processes_audit.py  screen_lock_audit.py  system_information.py  updates_audit.py
src/config/: colors.py  fonts.py  settings.py  theme.py  user_config.py
src/core/: audit_engine.py  logger.py  scan_worker.py
src/core/models/: system_info.py
src/core/platform/: platform_detector.py
src/models/: audit_result.py
src/providers/: base.py  factory.py
src/providers/linux/: encryption_provider.py  firewall_provider.py  screen_lock_provider.py  system_provider.py  update_provider.py
src/providers/macos/: encryption_provider.py  firewall_provider.py  screen_lock_provider.py  system_provider.py  update_provider.py
src/providers/windows/: encryption_provider.py  firewall_provider.py  screen_lock_provider.py  system_provider.py  update_provider.py
src/services/database/: db_manager.py
src/ui/: main_window.py
tests/: test_audit_engine.py  test_database.py  test_models.py  test_platform_and_providers.py  test_port_scanner.py  test_process_lookup.py  test_remediation.py  test_reports.py
(+26 files in other folders)
