[project]
name = "secureaudit"
version = "0.2.0"
description = "Cross-platform desktop security posture auditor (defensive security, not pentesting)"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Humair Ali" }
]

dependencies = [
    "PySide6>=6.6",
    "SQLAlchemy>=2.0",
    "reportlab>=4.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black", "ruff", "mypy"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
